hphp/test/zend/good/Zend/tests/assign_to_var_001.php
<?php

$var = array(1,2,3);
$var1 = &$var;
$var = $var[1];

var_dump($var);
var_dump($var1);

echo "Done\n";
?>